--- a/Test/src/main/resources/application.properties
+++ b/Test/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Test
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb1
 spring.datasource.username=piccolo
 spring.datasource.password=iit123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.devtools.livereload.enabled=true
 
 # Server Port (default 8080)
 server.port=8080
