Rest controller bug issue fixed

--- a/Test/src/main/resources/application.properties
+++ b/Test/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Test
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb1
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=piccolo
 spring.datasource.password=iit123
 spring.datasource.driver-class-name=org.postgresql.Driver
